// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
.c0.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(auto,1280px) 1fr;
  width: 100vw;
  min-height: 35rem;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-bottom: 6rem;
}

.c1.c1 {
  grid-area: 1 / 2 / 1 / 2;
  display: grid;
  grid-template-columns: 3fr 5fr;
  grid-template-areas: "title image" "extras image";
  grid-gap: 0.5rem;
  padding: 0 4rem;
}

.c2.c2 {
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  grid-area: title;
}

.c3.c3 {
  text-transform: uppercase;
}

.c4.c4 {
  grid-area: extras;
}

<section
  className="c0"
  data-cy="test-hero"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p>
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      className="c4"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
.c0.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(auto,1280px) 1fr;
  width: 100vw;
  min-height: 35rem;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-bottom: 6rem;
}

.c1.c1 {
  grid-area: 1 / 2 / 1 / 2;
  display: grid;
  grid-template-columns: 5fr 3fr;
  grid-template-areas: "title image" "extras image";
  grid-gap: 0.5rem;
  padding: 0 4rem;
}

.c2.c2 {
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  grid-area: title;
}

.c3.c3 {
  text-transform: uppercase;
}

.c4.c4 {
  grid-area: extras;
}

<section
  className="c0"
  data-cy="undefined-hero"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
      </h1>
      <p>
        2D-C/P Hydrometeor Imaging Probe
      </p>
    </div>
    <div
      className="c4"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;
